--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.sidebar {
+  float:right;
+  max-width: 240px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
