--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,11 @@ code {
 }
 
 .sidebar {
-  float:right;
+  float: right;
   max-width: 240px;
   border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.navbar{
+
 }
