--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,15 @@ code {
 
 .sidebar {
   float: right;
-	width: 200px;
-	padding: 15px 10px;
-  background-color: #6688CC;
+  max-width: 240px;
+  border: 1px solid #182978;
+  background-color: #ffffff;
+  color: #182978;
 }
 
-
+a:hover {
+  background-color: #ffffff;
+}
 
 .searchbar {
   float: right;
@@ -64,6 +67,7 @@ body {
   width:100%;
   height:100%;
 }
+
 header {
   background-color: #182978;
   opacity: 90%;
