--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,52 @@ code {
 }
 
 .sidebar {
-  float: right;
-  max-width: 240px;
+  width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  order: 2;
+  align-self: flex-end;
+  margin-left: auto;
+  overflow-y: scroll;
+  max-height: 400px;
 }
 
 .navbar{
 
+}
+
+#mainPage {
+  display: flex;
+  flex-flow: wrap;
+  margin: 2%;
+  height: 100%;
+}
+
+header {
+  width: 100%;
+}
+
+#newsContainer {
+  width: 75%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+#wrapper {
+  height: 100%;
+  width: 100%;
+  position:absolute;
+  overflow:hidden;
+}
+
+html {
+  min-height: 100%;
+  position: relative;
+}
+
+body {
+  height: 100%;
 }
