--- a/src/index.css
+++ b/src/index.css
@@ -145,15 +145,15 @@ header {
   grid-column: 1 / span 1;
   grid-row: first-line / 4;
   position: fixed;
-  bottom: 200px;
-  left: 300px;
+  top: 300px;
+  left: 150px;
 }
 
 .item-2 {
   grid-column: 2 / span 1;
   grid-row: second-line / 4;
   position: fixed;
-  bottom: 250px;
+  top: 300px;
   right: 300px;
 }
 
@@ -161,15 +161,15 @@ header {
   grid-column: 3 / span 1;
   grid-row: third-line / 4;
   position: fixed;
-  bottom: 200px;
-  left: 300px;
+  bottom: 70px;
+  left: 150px;
 }
 
 .item-4 {
   grid-column: 4 / span 1;
   grid-row: fourth-line / 4;
   position: fixed;
-  bottom: 200px;
+  bottom: 70px;
   right: 300px;
 }
 
