--- a/src/index.css
+++ b/src/index.css
@@ -139,9 +139,10 @@ header {
 }
 
 #newsContainer > div {
-  background: #4B9FE1;
+  background: #ACBFE6;
   padding: 1.5rem;
   border-radius: 1rem;
+  color: darkSlateGray;
 }
 
 .item-1 {
@@ -149,40 +150,7 @@ header {
   grid-row: first-line / 4;
   position: fixed;
   top: 300px;
-  left: 150px;
-}
-
-.item-2 {
-  grid-column: 2 / span 1;
-  grid-row: second-line / 4;
-  position: fixed;
-  top: 300px;
-  right: 300px;
-}
-
-.item-3 {
-  grid-column: 3 / span 1;
-  grid-row: third-line / 4;
-  position: fixed;
-  bottom: 70px;
-  left: 150px;
-}
-
-.item-4 {
-  grid-column: 4 / span 1;
-  grid-row: fourth-line / 4;
-  position: fixed;
-  bottom: 70px;
-  right: 300px;
-}
-
-.item-5 {
-  grid-column: 3 / span 1;
-  grid-row: third-line / 4;
-  position: fixed;
-  bottom: 70px;
-  left: 365px;
-  align-self: center;
+  left: 70px;
 }
 
 #wrapper {
