adjusts sourceList css

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,12 @@ a:hover {
 
 ul.component-list {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
+  position: relative;
+  left: 370px;
+  top: 100px;
+
 }
 
 li.component-item {
@@ -156,10 +161,20 @@ header {
   border-radius: 1rem;
 }
 
-#sourcelist{
+.component {
+  margin: 20px;
+  padding: 10px;
+  width: 300px;
+  border: 1px solid black;
+}
+
+ul.component-list {
   display: flex;
-  align-items: center;
-  
+  flex-wrap: wrap;
+}
+
+li.component-item {
+  display: inline;
 }
 
 .item-1 {
