--- a/src/index.css
+++ b/src/index.css
@@ -156,8 +156,8 @@ ul.source-list {
   left: 10px;
   top: 100px;
   overflow-y: scroll;
-overflow-x:hidden;
-max-height: 400px;
+  overflow-x:hidden;
+  max-height: 400px;
 }
 
 li.source-item {
@@ -175,7 +175,7 @@ button {
 }
 
 button:hover {
-  background-color: #6688CC;
+  background-color: #7ED5EA;
   color: white;
 }
 
